Processing rubocop and reek. Setting AbcSize#max to 16

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,7 @@
+Metrics/AbcSize:
+  Enabled: true
+  Max: 16
+
 Metrics/ClassLength:
   Description: 'Avoid classes longer than 100 lines of code.'
   Enabled: false
