--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,10 @@ AllCops:
   TargetRubyVersion: 2.7
   NewCops: enable
 
+require:
+  - rubocop-rspec
+  - rubocop-rake
+
 Layout/LineLength:
   Max: 180
 
@@ -15,6 +19,18 @@ Metrics/ClassLength:
 
 Metrics/MethodLength:
   Max: 11
+
+RSpec/BeforeAfterAll:
+  Enabled: false
+
+RSpec/InstanceVariable:
+  Enabled: false
+
+RSpec/MultipleExpectations:
+  Enabled: false
+
+RSpec/NestedGroups:
+  Max: 5
 
 Style/StringLiterals:
   Enabled: true
